WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271373
[@starting-style] Assert when inspecting @starting-style in debug build
https://bugs.webkit.org/show_bug.cgi?id=271373
Summary
[@starting-style] Assert when inspecting @starting-style in debug build
Antti Koivisto
Reported
2024-03-21 03:49:34 PDT
Inspector assert
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2024-03-21 03:50:32 PDT
...because asCSSRuleList returns null for @starting-style rules.
Radar WebKit Bug Importer
Comment 2
2024-03-21 03:50:45 PDT
<
rdar://problem/125156125
>
Antti Koivisto
Comment 3
2024-03-21 03:53:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26237
EWS
Comment 4
2024-03-21 07:01:13 PDT
Committed
276456@main
(e746fbb46234): <
https://commits.webkit.org/276456@main
> Reviewed commits have been landed. Closing PR #26237 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug