[@starting-style] Assert when inspecting @starting-style in debug build https://bugs.webkit.org/show_bug.cgi?id=271373 rdar://125156125

Reviewed by Antoine Quint.

* LayoutTests/inspector/css/getMatchedStylesForNode.html:
* Source/WebCore/css/CSSGroupingRule.h:
(isType):

Add type test.

* Source/WebCore/css/CSSRule.h:
(WebCore::CSSRule::isGroupingRule const):
* Source/WebCore/inspector/InspectorStyleSheet.cpp:
(WebCore::asCSSRuleList):

Return the rule list for @starting-style rules.
Refactor to handle all grouping rules uniformly.

Canonical link: https://commits.webkit.org/276456@main